@@ -13472,6 +13472,18 @@
 <Chinese>%1 冷卻階段... 你必須等待 %2 秒才能再次觸發！！！</Chinese>
 <French>Phase de recharge %1... Vous devez attendre %2 secondes pour tirer à nouveau!!!</French>
 </Key>
+<Key ID="STR_DOM_MISSIONSTRING_1969a">
+<English>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</English>
+<Spanish>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Spanish>
+<Portuguese>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Portuguese>
+<Korean>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Korean>
+<Japanese>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Japanese>
+<Original>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Original>
+<Russian>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Russian>
+<Chinesesimp>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Chinesesimp>
+<Chinese>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</Chinese>
+<French>%1 cooldown phase near ammo box... You have to wait %2 seconds to fire again!!!</French>
+</Key>
 <Key ID="STR_DOM_MISSIONSTRING_1970">
 <English>points for reviving another player</English>
 <Spanish>Puntos por revivir a otro jugador</Spanish>
